--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,9 +3,9 @@ name = "SpamWatchAPI"
 version = "0.2.2"
 authors = ["SitiSchu <admin@sitischu.com>"]
 edition = "2018"
-description = "API for t.me/SpamWatch to query User IDs for their ban status and reason."
+description = "API for t.me/JoinProtectionBot to query User IDs for their ban status and reason."
 homepage = "https://github.com/SpamWatch/SpamWatchAPI"
-repository = "https://github.com/SpamWatch/SpamWatchAPI"
+repository = "https://github.com/BolverBlitz/SpamWatchAPI/"
 license = "AGPL-3.0"
 
 [dependencies]
